added virtual class

--- a/Komunikator1/Komunikator1.vcxproj
+++ b/Komunikator1/Komunikator1.vcxproj
@@ -139,6 +139,7 @@
     <ClInclude Include="ConversationView.h">
       <FileType>CppForm</FileType>
     </ClInclude>
+    <ClInclude Include="DatabaseTable.h" />
     <ClInclude Include="Main.h">
       <FileType>CppForm</FileType>
     </ClInclude>
