--- a/Komunikator1/Komunikator1.vcxproj.filters
+++ b/Komunikator1/Komunikator1.vcxproj.filters
@@ -53,6 +53,9 @@
     <ClInclude Include="users\users.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DatabaseTable.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
